# arxiv-radar

./: .env.example  .gitignore  .mcp.json  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.yml  llms.txt
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_email_verification_password_reset.py  0003_paper_views.py  0004_citation_cache.py  0005_citation_cache_queue.py  0006_add_authors_to_search.py  0007_remove_username.py  0008_add_backfill_state.py  0009_add_digest_preferences.py  0010_collection_sharing.py  0011_paper_fulltext_and_chunks.py
backend/app/: cli.py  config.py  constants.py  main.py  mcp_server.py  mcp_server_main.py
backend/app/api/: auth.py  collections.py  deps.py  papers.py  rate_limit.py  recommendations.py  social.py  tags.py  webhooks.py
backend/app/db/: models.py  session.py
backend/app/services/: arxiv_ingest.py  backfill.py  cache.py  chunk_search.py  chunking.py  citations.py  classifier_recommender.py  collection_download.py  email.py  embeddings.py  fulltext.py  recommender.py  search.py  seed.py  serializers.py  webhook_sender.py
backend/app/worker/: scheduler.py  tasks.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/api/: client.ts  errors.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/hooks/: useAuth.ts  useTags.ts  (+2 more)
nginx/: nginx.conf  nginx.dev.conf
(+29 files in other folders)
